upgrade solrisk, added token-risk, tx-risk, subscrption model
